--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <a href="./index.html" target="_blank">Home</a>
+    <a href="./index.html">Home</a>
+
+    <ul class="gallery"></ul>
 
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
