--- a/src/2-form.html
+++ b/src/2-form.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <a href="./index.html" target="_blank">Home</a>
+    <a href="./index.html">Home</a>
+
+    <form class="feedback-form" autocomplete="off">
+      <label>
+        Email
+        <input type="email" name="email" autofocus />
+      </label>
+      <label>
+        Message
+        <textarea name="message" rows="8"></textarea>
+      </label>
+      <button type="submit">Submit</button>
+    </form>
 
     <script type="module" src="./js/2-form.js"></script>
   </body>
